Update Contact stamp to 007 and finalize visuals

--- a/src/index.css
+++ b/src/index.css
@@ -669,7 +669,7 @@ body {
 .stamp-footer {
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-end;
   border-top: 2px solid var(--stamp-black);
   padding-top: 12px;
@@ -683,20 +683,16 @@ body {
   letter-spacing: 2px;
   color: var(--stamp-black);
   line-height: 1;
-  text-align: center;
-  width: 100%;
+  text-align: left;
   z-index: 1;
 }
 
 .stamp-barcode-group {
-  position: absolute;
-  right: -2px;
-  bottom: -2px;
+  position: relative;
   text-align: right;
   z-index: 2;
-  transform: scale(0.9);
+  transform: scale(1.2);
   transform-origin: bottom right;
-  background: var(--stamp-cream);
   padding-left: 6px;
   padding-top: 4px;
 }
